<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newfield2.CreateNewFieldByWalkingFragment"
    android:background="@color/black"
    android:fitsSystemWindows="true">


    <com.google.android.gms.maps.MapView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="#80000000">


            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/noktalar_arasi_mesafe"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/diff_between_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_meter"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingStart="4dp"
                    android:layout_marginEnd="20dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/donum_alan"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/areaDonum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_dönüm"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingStart="4dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="4dp"
                android:background="#80000000">

                <Button
                    android:id="@+id/undo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:backgroundTint="@color/blue"
                    android:text="@string/geri_button" />

                <Button
                    android:id="@+id/add_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:backgroundTint="@color/blue"
                    android:text="@string/noktayi_yerlestir" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="4dp"
                android:background="#80000000">

                <Button
                    android:id="@+id/draw_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:backgroundTint="@color/blue"
                    android:text="@string/tarlayı_çiz" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:backgroundTint="@color/blue"
                    android:text="@string/kaydet_button" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</FrameLayout>