<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/login_background"
    tools:context=".ui.login.LoginFragment"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/LoginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_login_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="22dp"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/eMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="26dp"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="26dp"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/signup_now"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>